feat: Implementar interativos educacionais avançados e refatorar página de atenção
- Adicionar interativos avançados: Multi-Head Attention, Transformer, Sampling, Feed-Forward, Model Comparison
- Refatorar attention.html com estrutura pedagógica melhorada
- Implementar navegação por passos e visualizações interativas
- Adicionar calculadora matemática e laboratório prático
- Corrigir roteamento do servidor web (porta 3000)
- Melhorar experiência educacional com exemplos práticos

--- a/interativos/index.html
+++ b/interativos/index.html
@@ -162,7 +162,7 @@
                 description: 'Entenda como o texto é convertido em tokens que o modelo pode processar',
                 difficulty: 'beginner',
                 category: 'Pré-processamento',
-                available: false
+                available: true
             },
             {
                 id: 'embeddings',
@@ -170,7 +170,23 @@
                 description: 'Explore como palavras são representadas como vetores em espaços multidimensionais',
                 difficulty: 'intermediate',
                 category: 'Representação',
-                available: false
+                available: true
+            },
+            {
+                id: 'positional_encoding',
+                title: 'Codificação Posicional',
+                description: 'Entenda como os Transformers sabem a ordem das palavras usando funções matemáticas',
+                difficulty: 'intermediate',
+                category: 'Arquitetura',
+                available: true
+            },
+            {
+                id: 'layer_normalization',
+                title: 'Layer Normalization',
+                description: 'Descubra como a normalização estabiliza o treinamento de redes neurais profundas',
+                difficulty: 'intermediate',
+                category: 'Arquitetura',
+                available: true
             },
             {
                 id: 'attention',
@@ -178,15 +194,87 @@
                 description: 'Visualize como o modelo "presta atenção" a diferentes partes do texto',
                 difficulty: 'intermediate',
                 category: 'Arquitetura',
-                available: false
+                available: true
+            },
+            {
+                id: 'multi_head_attention',
+                title: 'Multi-Head Attention',
+                description: 'Explore como múltiplas cabeças de atenção trabalham em paralelo',
+                difficulty: 'advanced',
+                category: 'Arquitetura',
+                available: true
+            },
+            {
+                id: 'advanced_attention',
+                title: 'Atenção Avançada',
+                description: 'Visualização completa com controles avançados, tipos de atenção e métricas detalhadas',
+                difficulty: 'advanced',
+                category: 'Atenção',
+                available: true
             },
             {
                 id: 'transformer',
                 title: 'Arquitetura Transformer',
-                description: 'Compreenda a estrutura completa de um modelo Transformer',
+                description: 'Explore a arquitetura completa do Transformer',
                 difficulty: 'advanced',
                 category: 'Arquitetura',
-                available: false
+                available: true
+            },
+            {
+                id: 'sampling_strategies',
+                title: 'Estratégias de Amostragem',
+                description: 'Explore como diferentes estratégias controlam a criatividade na geração de texto',
+                difficulty: 'advanced',
+                category: 'Inferência',
+                available: true
+            },
+            {
+                id: 'advanced_sampling',
+                title: 'Estratégias de Amostragem Avançadas',
+                description: 'Explore técnicas avançadas de amostragem com visualizações interativas e comparações em tempo real',
+                difficulty: 'advanced',
+                category: 'Geração',
+                available: true
+            },
+            {
+                id: 'feed_forward',
+                title: 'Feed-Forward Networks',
+                description: 'Explore como as redes feed-forward processam informações através de camadas densas',
+                difficulty: 'intermediate',
+                category: 'Arquitetura',
+                available: true
+            },
+            {
+                id: 'advanced_feedforward',
+                title: 'Feed-Forward Networks Avançadas',
+                description: 'Visualizações avançadas de neurônios, ativações, gradientes e comparação de funções de ativação',
+                difficulty: 'advanced',
+                category: 'Arquitetura',
+                available: true
+            },
+            {
+                id: 'residual_connections',
+                title: 'Residual Connections',
+                description: 'Entenda como as conexões residuais resolvem o problema do gradiente que desaparece',
+                difficulty: 'intermediate',
+                category: 'Arquitetura',
+                available: true
+            },
+            {
+                id: 'loss_function',
+                title: 'Função de Perda Cross-Entropy',
+                description: 'Entenda como a função de perda mede e otimiza o aprendizado do modelo',
+                difficulty: 'intermediate',
+                category: 'Treinamento',
+                available: true
+            },
+            {
+                id: 'advanced_transformer',
+                title: 'Transformer Avançado',
+                description: 'Arquitetura completa com comparações, métricas e visualizações detalhadas',
+                difficulty: 'advanced',
+                category: 'Arquitetura',
+                available: true
             },
             {
                 id: 'training',
@@ -194,7 +282,7 @@
                 description: 'Acompanhe como o modelo aprende através do processo de treinamento',
                 difficulty: 'advanced',
                 category: 'Treinamento',
-                available: false
+                available: true
             },
             {
                 id: 'inference',
@@ -202,7 +290,15 @@
                 description: 'Veja como o modelo gera texto novo a partir de um prompt',
                 difficulty: 'intermediate',
                 category: 'Inferência',
-                available: false
+                available: true
+            },
+            {
+                id: 'model_comparison',
+                title: 'Comparação de Modelos',
+                description: 'Compare diferentes tamanhos de modelo GPT e suas características de performance',
+                difficulty: 'advanced',
+                category: 'Análise',
+                available: true
             }
         ];
 
